# web-openscad-editor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  action.yml  config-schema.json  config_generated.py  editor.toml  generate.py  pyproject.toml  test.scad
.github/workflows/: pages.yml  verify.yml
src/: config_generated.py  generate.py  index.html.jinja2  model.py  multi_index.html.jinja2  worker.js.jinja2
src/static/editor/: analytics.js  customization.js  dom.js  main.js  modelConfig.js  profiles.js  rendering.js
tests/: test_generate.py  test_model.py
